Updated content for Matt's page

--- a/naturalDisasters.html
+++ b/naturalDisasters.html
@@ -11,26 +11,81 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="#">Applications of Computing</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Social Media</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="THE INTERNET.html">The Internet</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="naturalDisasters.html">Natural Disasters</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="jacob.html">Medical</a>
+                </li>
+              </ul>
+      </div>
+    </nav>
+
     <h1>Predicting and Preventing Natural Disasters</h1>
-    <p>
+
+    <div>
+      <h3>Why we Predict the Weather</h3>
+      <p>
         Computers have been predicting the weather with some level of success since the 1950s - This is known as numerical weather prediction.
         Since then, numerical weather prediction continues to become more accurate as we use more advanced technology.
         Knowing when and where a natural disaster will hit has helped mitigate many hurricanes such as:
         <ul>
-            <li>Hurricane Rita (2005)</li>
-            <li>Hurricane Gustav (2008)</li>
-            <li>Hurricane Ike (2008)</li>
-            <li>Hurricane Harvey (2017)</li>
+          <li>Hurricane Rita (2005)</li>
+          <li>Hurricane Gustav (2008)</li>
+          <li>Hurricane Ike (2008)</li>
+          <li>Hurricane Harvey (2017)</li>
         </ul>
-        Amoung 
-        <a href = "https://disasterphilanthropy.org/disaster/2021-atlantic-hurricane-season/">many others</a>. 
-        By predicting the nature of these hurricanes before they hit, appropriate measures can be taken to prevent potential catastrophies.
-    </p>
+        Amoung <a href = "https://disasterphilanthropy.org/disaster/2021-atlantic-hurricane-season/">many others</a>. 
+        By predicting the nature of these hurricanes before they hit, appropriate measures can be taken to prevent potential catastrophes.
+        When authorities have time to react to a natural disaster, such as a hurricane, they can better prepare for the consequences.
+      </p>
+    </div>
 
-    <p>
-        Creating predictions with even just a minor amount of success requires a lot of computational power. Since there are so many constantly changing factors to take into account when predicting the weather, supercomputers have been necessary for creating the most accurate predictions.
-        Increasingly, artificial intelligence (AI) is playing a mojor role in monitoring the weather. Since we now have so much data on different natural disasters, it is an ideal problem for AI to solve.
-    </p>
+    <div>
+      <h3>Artificial Intelligence</h3>
+      <div class = "row">
+        <div class = "col-md-6">
+          <p>
+            Artifical intelligence (AI) is a method of solving problems by analysing a large set of data, although there's 
+            <a href = "https://www.datarobot.com/wiki/artificial-intelligence/">more to it</a> than that.
+            Increasingly, AI is playing a major role in monitoring the weather. Since we now have so much data on different natural disasters, it is an ideal problem for AI to solve.
+            AI works by analysing many variables in the climate and uses that information to predict how the weather will change.
+            Historically, earthquakes have been difficult to predict due to their seemingly random nature. However, scientists have collected accurate data of over 130,000 earthquakes and the subsequent aftershocks.
+            Modern AI has been able to analyse this data and predict the locations of aftershocks more successfully than any other method.
+          </p>
+        </div>
+        <div class = "col-md-6">
+          <figure class = "figure">
+            <img src="earthquakeSatellite.jpg" alt="Satellite Imagery used by AI" class="figure-img img-fluid rounded">
+            <figcaption class = "figure-caption">Photo by <a href="https://unsplash.com/@usgs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">USGS</a> on <a href="https://unsplash.com/s/photos/meteorology-earthquake-satellite?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <h3 class="display-5">The Author <side class="display-6"> - Matt Phillips</side> </h3>
+          <a href="https://github.com/mjp9876" class="card-link">Github Profile</a>
+          <a href="https://www.linkedin.com/in/matthew-phillips-49491a224/" class="card-link">Linkedin Profile</a>
+          <p>Include information here about the author</p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
