--- a/THE INTERNET.html
+++ b/THE INTERNET.html
@@ -44,6 +44,29 @@
             <a id = Communication></a>
         </h2>
         <p>
-            
+            Origianlly the Internet was only used by Universities to share data and findings. Now anyone can use the Internet to communicate with people from any country and timezone around the world. This is still very useful for sharing information but also useful for families and friends to stay connected when they do not live close to eachother.
         </p>
+        <p>
+            Websistes such as Facebook and Twitter allow people to message eachother for free and share other content such as images, videos and GIFs. E-mail is proably the msot common way people communicate over the internet. 306 billion E-mails are sent around the world daily. The internet allows businessess to negotiate without ever having to meet in person wich saves a lot of time.
+        </p>
+        <h2>
+            Community
+            <a id = Community></a>
+        </h2>
+        <p>
+            The internet enables communities of like-minded people from around the world to connect and shared their interests. This is particularly useful for people who have niche interets that cannot usually share their passion with others. The Internet has so many users that there is bound to be another person that shares your passion.
+        </p>
+        <h2>
+            Awareness
+            <a id = Awareness></a>
+        </h2>
+        <p>
+            The Internet allows anyone to share information on social media sites such as Facebook and Instagram. This allows people to spread awraeness of issues not only locally but in the wider community and even about foreign countries. Donation pages and petition sites can also be set up in order for anyone to have a say/impact on issues around the globe. Sites like this include <a href = https://www.change.org/start-a-petition>Change.org</a> and <a href = https://www.justgiving.com>Just Giving</a>
+        </p>
+        <h2>
+            Author
+        </h2>
+        <P>
+            
+        </P>
     </body>
