--- a/THE INTERNET.html
+++ b/THE INTERNET.html
@@ -8,6 +8,32 @@
     <link href="style.css" rel="stylesheet" >
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Applications of Computing</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="tonysPage.html">Social Media</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="THE INTERNET.html">The Internet</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="naturalDisasters.html">Natural Disasters</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="jacob.html">Medical</a>
+                      </li>
+                    </ul>
+            </div>
+        </nav>
         <h1>
             THE INTERNET
         </h1>
