--- a/tonysPage.html
+++ b/tonysPage.html
@@ -20,7 +20,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Social Media</a>
+                    <a class="nav-link" href="tonysPage.html">Social Media</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="THE INTERNET.html">The Internet</a>
