Added navbar to all pages and added author info

--- a/jacob.html
+++ b/jacob.html
@@ -8,6 +8,32 @@
  </html>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Applications of Computing</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="tonysPage.html">Social Media</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="THE INTERNET.html">The Internet</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="naturalDisasters.html">Natural Disasters</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="jacob.html">Medical</a>
+                  </li>
+                </ul>
+        </div>
+    </nav>
     <h1 align="center" class ="Title">How Computing has been used to benefit Healthcare:</h1>
     <h2 align="center">Reasons how it has benefitted:</h2>
     <ul>
@@ -21,4 +47,12 @@
            This new Hazan Venture Lab, has been created to help fund start-up ideas of the Univesity Students, and these startups are likely to bring new and innovate ideas that will have many benefits to society.
         </p>
     <h2></h2>
+
+    <div>
+        <h3 class="display-5">The Author <side class="display-6"> - Jacob Dear</side> </h3>
+            <a href="https://github.com/jacobdear1" class="card-link">Github Profile</a>
+            <a href="https://www.linkedin.com/in/jacob-dear-450b12224/" class="card-link">Linkedin Profile</a>
+            <p>Jacob Dear is a first year Durham University student studying Computer Science.</p>
+    </div>
+
 </body>
