--- a/tonysPage.html
+++ b/tonysPage.html
@@ -66,7 +66,7 @@
       <div class="bg-light card">
           <h3 class="display-5">The Author <side class="display-6">-Tony Dalziel</side> </h3>
           <a href="https://www.linkedin.com/in/tony-dalziel-553025223/" class="card-link">LinkedIn Profile</a>
-          <p>Include information here about the author</p>
+          <p>Tony is a first year Durham University student studying Computer Science.</p>
 
       </div>
     </div>
