--- a/THE INTERNET.html
+++ b/THE INTERNET.html
@@ -8,6 +8,32 @@
     <link href="style.css" rel="stylesheet" >
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Applications of Computing</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="tonysPage.html">Social Media</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="THE INTERNET.html">The Internet</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="naturalDisasters.html">Natural Disasters</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="jacob.html">Medical</a>
+                      </li>
+                    </ul>
+            </div>
+        </nav>
         <h1>
             THE INTERNET
         </h1>
@@ -46,4 +72,12 @@
         <p>
             
         </p>
+
+        <div>
+            <h3 class="display-5">The Author <side class="display-6"> - William Henderson</side> </h3>
+                <a href="https://github.com/williamhenderson02" class="card-link">Github Profile</a>
+                <p>Will is a first year Durham University student studying Computer Science.</p>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
