added html comments

--- a/naturalDisasters.html
+++ b/naturalDisasters.html
@@ -37,7 +37,7 @@
               </ul>
       </div>
     </nav>
-
+<!-- div not closed -->
     <h1>Predicting and Preventing Natural Disasters</h1>
 
     <div>
@@ -52,7 +52,8 @@
           <li>Hurricane Ike (2008)</li>
           <li>Hurricane Harvey (2017)</li>
         </ul>
-        Amoung <a href = "https://disasterphilanthropy.org/disaster/2021-atlantic-hurricane-season/">many others</a>. 
+      <!-- among -->
+        Amoung <a href = "https://disasterphilanthropy.org/disaster/2021-atlantic-hurricane-season/">many others</a>.
         By predicting the nature of these hurricanes before they hit, appropriate measures can be taken to prevent potential catastrophes.
         When authorities have time to react to a natural disaster, such as a hurricane, they can better prepare for the consequences.
       </p>
@@ -63,7 +64,8 @@
       <div class = "row">
         <div class = "col-md-6">
           <p>
-            Artifical intelligence (AI) is a method of solving problems by analysing a large set of data, although there's 
+            <!-- artificial -->
+            Artifical intelligence (AI) is a method of solving problems by analysing a large set of data, although there's
             <a href = "https://www.datarobot.com/wiki/artificial-intelligence/">more to it</a> than that.
             Increasingly, AI is playing a major role in monitoring the weather. Since we now have so much data on different natural disasters, it is an ideal problem for AI to solve.
             AI works by analysing many variables in the climate and uses that information to predict how the weather will change.
@@ -84,6 +86,7 @@
       <h3 class="display-5">The Author <side class="display-6"> - Matt Phillips</side> </h3>
           <a href="https://github.com/mjp9876" class="card-link">Github Profile</a>
           <a href="https://www.linkedin.com/in/matthew-phillips-49491a224/" class="card-link">Linkedin Profile</a>
+      <!-- author info missing -->
           <p>Include information here about the author</p>
     </div>
 
