--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                   </li>
                 </ul>
         </div>
+          <!-- unclosed div tag here -->
     </nav>
     <div class="bg-info pb-1">
       <h1 class="display-1 mx-1">Applications of Computing</h1>
